# NhanDangDongHoNuoc

./: GenData.py  LICENSE  Preprocess.py  README.md  UI.py  UIold.py  classifications.txt  flattened_images.txt  giải thích các file.txt  hello.py  pyproject.toml  qlttn.bacpac  xla.py
.devcontainer/: devcontainer.json
